Update .gitignore to exclude backend and frontend files
Added entries to ignore backend and frontend files.

--- a/Code/backend/.gitignore
+++ b/Code/backend/.gitignore
@@ -31,3 +31,18 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Backend
+/backend/target
+/backend/.idea
+/backend/*.log
+/backend/application.properties
+/backend/application.yml
+
+# Frontend
+/frontend/node_modules
+/frontend/dist
+/frontend/.env
+
+# General
+.DS_Store
